--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "path": "^0.12.7",
     "react": "^19.0.0",
-    "react-code-input": "^3.10.1",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-verification-input": "^4.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
