ci: Add test execution step to workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,10 @@ jobs:
         uses: borales/actions-yarn@v4
         with:
           cmd: install
+      - name: Run tests
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: test
       - name: Build
         uses: borales/actions-yarn@v4
         with:
